[package]
name = "secret-santa"
version = "0.1.0"
authors = ["alxbavy <al3xander.bavykin@gmail.com>", "nectorprog <nector.dev@gmail.com>", "dtishkina <lfhmztshkn@gmail.com>", "rafoobustos <reich.rafoo@gmail.com>", "AeZG <gregorydyuldin@gmail.com>", "nikaNGC224 <veronika_rassokhina@mail.ru>", "friedNoodle1337 <sa.hei@mail.ru>"]
edition = "2021"


[dependencies]
actix-web = "4.2.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
